--- a/vars/default.yml
+++ b/vars/default.yml
@@ -3,10 +3,10 @@
 php_modules: [ 'php-curl', 'php-gd', 'php-mbstring', 'php-xml', 'php-xmlrpc', 'php-soap', 'php-intl', 'php-zip' ]
 
 #MySQL Settings
-mysql_root_password: "PDkprayG9964"
-mysql_db: "minkeymajik"
-mysql_user: "superminkey"
-mysql_password: "6jDihgppDRyD"
+mysql_root_password: "********"
+mysql_db: "*********"
+mysql_user: "*********"
+mysql_password: "*********"
 
 #HTTP Settings
 http_host: "minkeymajik.com"
